--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,9 +4,6 @@
     <p>This page is a sample of my work - please feel free to try them out.</p>
   </div>
   <div class="projects-section">
-
-
-
     <div *ngFor="let project of projects; index as i" class="project">
       <div class="project-image-container" *ngIf="i % 2 == 0">
         <img [src]="project.image" alt="" class="project-image" draggable="false">
@@ -35,56 +32,10 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--     <div class="project">
-      <div class="project-image">
-        <img src="" alt="">
-        <div>
-          <img class="project-arrow" src="assets/img/project-arrow.svg" alt="">
-        </div>
-      </div>
-      <div class="project-description">
-        <p>01/05</p>
-        <div>
-          <h1>Join</h1>
-          <p>Angular | Typescript | HTML | CSS | Firebase</p>
-          <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
-          <div class="project-buttons">
-            <button>Github</button><button>Live-Test</button>
-          </div>
-        </div>
-      </div>
+  </div>
+  <div class="arrow-down" (click)="scrollToElement('mySkills')">
+    <div>
+      <img src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
     </div>
-    <div class="project">
-      <div class="project-description">
-        <p>02/05</p>
-        <div>
-          <h1>Join</h1>
-          <p>Angular | Typescript | HTML | CSS | Firebase</p>
-          <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
-          <div class="project-buttons">
-            <button>Github</button><button>Live-Test</button>
-          </div>
-        </div>
-      </div>
-      <div class="project-image">
-        <img src="" alt="">
-        <div>
-          <img class="project-arrow-reverse" src="assets/img/project-arrow.svg" alt="">
-        </div>
-      </div>
-    </div> -->
   </div>
 </div>
