added all the elements to have a overview

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,25 @@
-<p>contact works!</p>
+<div class="contact-section">
+  <div class="contact-legal-notice">
+    <div class="contact">
+      <h1>Say Hi!</h1>
+      <p class="contact-form-headline">Want to discuss a new project?</p>
+      <p class="contact-form-text">Say hello! let's discuss your ideas and make it happen</p>
+      <div class="contact-form">
+        <input type="text" placeholder="Your name">
+        <input type="text" placeholder="Your Email">
+        <input type="text" placeholder="Your message">
+        <button>Send message</button>
+      </div>
+    </div>
+    <div class="legal-notice">
+      <div class="name">
+        <img src="" alt="">
+        <p>© Yusuf Filiz 2023</p>
+      </div>
+      <div class="social-links">
+        <div class="icons"></div>
+        <p>Legal notice</p>
+      </div>
+    </div>
+  </div>
+</div>
