--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <app-about-me id="aboutMe"></app-about-me>
 <app-my-skills id="mySkills"></app-my-skills>
 <app-portfolio id="portfolio"></app-portfolio>
-<app-not-done-yet></app-not-done-yet>
+<app-contact id="contact"></app-contact>
