--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <div class="arrow-down" (click)="scrollToElement('mySkills')">
+  <div class="arrow-down" (click)="scrollToElement('contact')">
     <div>
       <img src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
     </div>
