made some design changes

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,7 +7,7 @@
       <div class="contact-form">
         <input type="text" placeholder="Your name">
         <input type="text" placeholder="Your Email">
-        <input type="text" placeholder="Your message">
+        <textarea class="contact-message" type="text" placeholder="Your message"></textarea>
         <button>Send message</button>
       </div>
     </div>
