--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -40,11 +40,12 @@
         height: 68px;
         border: 4px solid #000;
         background-color: #fffcf3;
-        padding: 10px 30px;
         font-size: 23px;
         font-family: "Overpass";
         cursor: pointer;
         transition: ease-in-out 100ms;
+        text-align: center;
+        line-height: 64px;
         &:hover {
           width: 253px;
           font-weight: 600;
