--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,7 +7,10 @@
       <div class="contact-form">
         <input type="text" placeholder="Your name">
         <input type="text" placeholder="Your Email">
-        <textarea class="contact-message" type="text" placeholder="Your message"></textarea>
+        <div class="textarea-container">
+          <label for="message" class="textarea-label" [class.focused]="isFocused">Your message</label>
+          <textarea class="contact-message" id="message" (focus)="focus(true)" (blur)="focus(false)"></textarea>
+      </div>
         <button>Send message</button>
       </div>
     </div>
