--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -14,13 +14,13 @@
 
       h1 {
         margin: 0;
-        padding-top: 250px;
+        padding-top: 240px;
         padding-left: 70px;
         font-family: "Syne";
         font-style: normal;
         font-weight: 800;
         font-size: 78px;
-        margin-bottom: 40px;
+        margin-bottom: 50px;
       }
 
       .contact-form-headline {
@@ -62,8 +62,7 @@
         height: 50px;
         background: #000000;
         border: 0;
-        border: 2px solid transparent;
-        border-bottom: 2px solid #fffcf3;
+        box-shadow: 0 2px 0 0  #fffcf3;
         padding: 15px 25px;
         gap: 10px;
         font-family: "Overpass";
@@ -72,9 +71,9 @@
         font-size: 16px;
         color: #fffcf3;
         cursor: pointer;
-        transition: 150ms ease-in-out;
+        transition: 100ms ease-in-out;
         &:hover {
-          border: 2px solid #fffcf3;
+          box-shadow: 0 0 0 4px #fffcf3;
         }
       }
 
@@ -86,39 +85,66 @@
         color: #fffcf3;
       }
 
-      textarea {
-        width: 617px;
-        height: 202px;
-        background: #000000;
-        border: 0;
-        border: 2px solid transparent;
-        border-bottom: 2px solid #fffcf3;
-        padding: 15px 25px;
-        gap: 10px;
-        font-family: "Overpass";
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        color: #fffcf3;
-        cursor: pointer;
-        transition: 150ms ease-in-out;
-        &:hover {
-          border: 2px solid #fffcf3;
-        }
-      }
+.textarea-container {
+    position: relative;
+}
 
-      textarea::placeholder {
-        font-family: "Overpass";
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        color: #fffcf3;
-      }
+.textarea-label {
+    position: absolute;
+    top: 15px;
+    left: 17px;
+    padding-left: 8px;
+    padding-right: 8px;
+    transition: top 0.3s ease, color 0.3s ease;
+    background-color: #000000;
+    color: #fffcf3;
+    font-family: "Overpass";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    z-index: 2;
+}
+
+.textarea-label.focused {
+    top: -11px;
+    color: #fffcf3;
+}
+
+.contact-message {
+    width: 617px;
+    height: 202px;
+    background: #000000;
+    border: 0;
+    box-shadow: 0 2px 0 0 #fffcf3;
+    padding: 15px 25px;
+    gap: 10px;
+    font-family: "Overpass";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #fffcf3;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    resize: none;
+    cursor: pointer;
+    transition: 100ms ease-in-out;
+    position: relative;
+    z-index: 1; /* make sure textarea is above the label */
+    &:hover {
+      box-shadow: 0 0 0 4px #fffcf3;
+    }
+}
+
+.contact-message:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #fffcf3;
+  cursor: text;
+}
 
       button {
         width: 250px;
         height: 68px;
-        border: 5px solid #fffcf3;
+        border: 4px solid #fffcf3;
         background-color: transparent;
         color: #fffcf3;
         font-size: 23px;
