--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,13 +10,13 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
-  background-color: rgba(255, 255, 255, 0);
+  width: 6px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #5988ff;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-button {
