--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -57,12 +57,55 @@
       align-items: center;
       gap: 45px;
 
+      .email-container {
+        position: relative;
+        display: flex;
+        align-items: center;
+        label {
+          position: absolute;
+          left: 17px;
+          padding-left: 8px;
+          padding-right: 8px;
+          transition: top 0.3s ease, color 0.3s ease;
+          background-color: #000000;
+          color: #fffcf3;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          z-index: 2;
+          transition: 100ms ease-in-out;
+        }
+      }
+
+      .name-container {
+        position: relative;
+        display: flex;
+        align-items: center;
+        label {
+          position: absolute;
+          left: 17px;
+          padding-left: 8px;
+          padding-right: 8px;
+          transition: top 0.3s ease, color 0.3s ease;
+          background-color: #000000;
+          color: #fffcf3;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          z-index: 2;
+          transition: 100ms ease-in-out;
+        }
+      }
+
       input {
+        position: relative;
         width: 617px;
         height: 50px;
         background: #000000;
         border: 0;
-        box-shadow: 0 2px 0 0  #fffcf3;
+        box-shadow: 0 2px 0 0 #fffcf3;
         padding: 15px 25px;
         gap: 10px;
         font-family: "Overpass";
@@ -77,69 +120,77 @@
         }
       }
 
-      input::placeholder {
+      input:focus {
+        outline: none;
+        box-shadow: 0 0 0 2px #fffcf3;
+        cursor: text;
+      }
+
+      .input-name-label.focused {
+        top: -11px;
+        color: #fffcf3;
+      }
+
+      .input-email-label.email-focused {
+        top: -11px;
+        color: #fffcf3;
+      }
+
+      .textarea-container {
+        position: relative;
+      }
+
+      .textarea-label {
+        position: absolute;
+        top: 15px;
+        left: 17px;
+        padding-left: 8px;
+        padding-right: 8px;
+        transition: top 0.3s ease, color 0.3s ease;
+        background-color: #000000;
+        color: #fffcf3;
+        font-family: "Overpass";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        z-index: 2;
+      }
+
+      .textarea-label.focused {
+        top: -11px;
+        color: #fffcf3;
+      }
+
+      .contact-message {
+        width: 617px;
+        height: 202px;
+        background: #000000;
+        border: 0;
+        box-shadow: 0 2px 0 0 #fffcf3;
+        padding: 15px 25px;
+        gap: 10px;
         font-family: "Overpass";
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
         color: #fffcf3;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        resize: none;
+        cursor: pointer;
+        transition: 100ms ease-in-out;
+        position: relative;
+        z-index: 1;
+        &:hover {
+          box-shadow: 0 0 0 4px #fffcf3;
+        }
       }
 
-.textarea-container {
-    position: relative;
-}
-
-.textarea-label {
-    position: absolute;
-    top: 15px;
-    left: 17px;
-    padding-left: 8px;
-    padding-right: 8px;
-    transition: top 0.3s ease, color 0.3s ease;
-    background-color: #000000;
-    color: #fffcf3;
-    font-family: "Overpass";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    z-index: 2;
-}
-
-.textarea-label.focused {
-    top: -11px;
-    color: #fffcf3;
-}
-
-.contact-message {
-    width: 617px;
-    height: 202px;
-    background: #000000;
-    border: 0;
-    box-shadow: 0 2px 0 0 #fffcf3;
-    padding: 15px 25px;
-    gap: 10px;
-    font-family: "Overpass";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    color: #fffcf3;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    resize: none;
-    cursor: pointer;
-    transition: 100ms ease-in-out;
-    position: relative;
-    z-index: 1; /* make sure textarea is above the label */
-    &:hover {
-      box-shadow: 0 0 0 4px #fffcf3;
-    }
-}
-
-.contact-message:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px #fffcf3;
-  cursor: text;
-}
+      .contact-message:focus {
+        outline: none;
+        box-shadow: 0 0 0 2px #fffcf3;
+        cursor: text;
+      }
 
       button {
         width: 250px;
