added new animation to the label

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -201,6 +201,10 @@
         }
       }
 
+      .form-filled-label {
+        color: #5988ff !important;
+      }
+
       button {
         width: 250px;
         height: 68px;
