--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,15 +7,26 @@
       <div class="contact-form">
         <div class="name-container">
           <label id="nameLabel">Your name</label>
-          <input id="nameInput" (focus)="nameLabelUp()" (focusout)="nameLabelDown()" (input)="updateFormFilledStatus($event)" type="text">
+          <input id="nameInput"
+            (focus)="nameLabelUp(); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled', false); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled-label', true);"
+            (focusout)="nameLabelDown(); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled', false); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled-label', true);"
+            (input)="updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled', false); updateFormFilledStatus($event, 'nameInput', 'nameLabel', 'form-filled-label', true);"
+            type="text">
         </div>
         <div class="email-container">
           <label id="emailLabel">Your email</label>
-          <input id="emailInput" (focus)="emailLabelUp()" (focusout)="emailLabelDown()" (input)="updateFormFilledStatus($event)" type="email">
+          <input id="emailInput"
+            (focus)="emailLabelUp(); updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled', false); updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled-label', true);"
+            (focusout)="emailLabelDown(); updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled', false); updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled-label', true);"
+            (input)="updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled', false); updateFormFilledStatus($event, 'emailInput', 'emailLabel', 'form-filled-label', true);"
+            type="email">
         </div>
         <div class="textarea-container">
           <label id="textLabel" class="textarea-label">Your message</label>
-          <textarea id="textArea" class="contact-message" (focus)="textLabelUp()" (focusout)="textLabelDown()" (input)="updateFormFilledStatus($event)"></textarea>
+          <textarea id="textArea" class="contact-message"
+          (focus)="textLabelUp(); onFocus($event); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled', false); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled-label', true);"
+          (focusout)="textLabelDown(); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled', false); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled-label', true);"
+          (input)="updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled', false); updateFormFilledStatus($event, 'textArea', 'textLabel', 'form-filled-label', true);"></textarea>
         </div>
         <button>Send message</button>
       </div>
