--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,11 +2,12 @@
   height: 100vh;
   width: 100%;
   color: white;
+
   .contact-legal-notice {
     width: 100%;
     height: 100%;
     background-color: black;
-    clip-path: polygon(0% 0%, 0% 8%, 100% 24%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 0% 8%, 100% 24%, 100% 100%, 0% 100%) !important;
 
     .contact {
       height: 90%;
