--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     background-color: black;
-    clip-path: polygon(0% 0%, 0% 8%, 100% 24%, 100% 100%, 0% 100%) !important;
+    clip-path: polygon(0% 0%, 0% 8%, 100% 24%, 100% 100%, 0% 100%);
 
     .contact {
       height: 90%;
@@ -58,7 +58,7 @@
       align-items: center;
       gap: 60px;
 
-      .email-container {
+      .form-input-container {
         position: relative;
         display: flex;
         align-items: center;
@@ -77,27 +77,7 @@
           font-size: 16px;
         }
       }
-
-      .name-container {
-        position: relative;
-        display: flex;
-        align-items: center;
-        label {
-          position: absolute;
-          top: 21px;
-          left: 17px;
-          padding-left: 8px;
-          padding-right: 8px;
-          transition: top 0.3s ease, color 0.3s ease;
-          background-color: #000000;
-          color: #fffcf3;
-          font-family: "Overpass";
-          font-style: normal;
-          font-weight: 400;
-          font-size: 16px;
-        }
-      }
-
+      
       input {
         position: relative;
         width: 617px;
