added links to the icons

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -47,13 +47,13 @@
             </p>
           </div>
           <div class="icons">
-            <div>
-              <img src="assets/img/github.svg" alt="">
+            <div (click)="navigateTo('https://github.com/YusufFiliz95')">
+              <img src="assets/img/github.svg" alt="" id="githubLink">
             </div>
             <div>
               <img src="assets/img/email.svg" alt="">
             </div>
-            <div>
+            <div (click)="navigateTo('https://www.linkedin.com/in/yusuf-filiz-b75b2a196')">
               <img src="assets/img/linkedin.svg" alt="">
             </div>
           </div>
