--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="title-email-scroll">
     <div class="title-email">
-      <p (click)="scrollToElement('title')">y.filiz.ch@gmail.com</p>
+      <p (click)="scrollToElement('contact')">y.filiz.ch@gmail.com</p>
     </div>
     <div class="title-scroll">
       <div class="arrow-text" (click)="scrollToElement('aboutMe')">
