--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -14,7 +14,7 @@
             Let's discuss how we can collaborate to create impactful and cutting-edge web solutions. Don't hesitate to
             contact me today!</p>
           <div>
-            <button>Let's talk</button>
+            <button (click)="scrollToElement('contact')">Let's talk</button>
           </div>
         </div>
         <div class="about-me-img">
