--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -290,6 +290,11 @@
     font-family: "Overpass";
     font-size: 16px;
     margin-right: 80px;
+    cursor: pointer;
+    transition: 100ms ease-in-out;
+    &:hover {
+      color: #5988ff;
+    }
   }
 }
 
@@ -313,4 +318,11 @@
       padding-bottom: 40px;
     }
   }
+}
+
+
+.legal-notice-container {
+  width: 100%;
+  height: 100vh;
+  background: #fffcf3;
 }
