added legal notice and imprint

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -322,6 +322,10 @@
 
 
 .legal-notice-container {
+  position: fixed;
+  overflow: auto;
+  z-index: 9;
+  bottom: 0;
   width: 100%;
   height: 100vh;
   background: #fffcf3;
