--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -321,7 +321,6 @@
 }
 
 .legal-notice-container {
-  display: none; //At first
   position: fixed;
   overflow: auto;
   z-index: 9;
@@ -329,4 +328,52 @@
   width: 100%;
   height: 100vh;
   background: #fffcf3;
+  transform: translateY(100%);
+  transition: transform 400ms ease-out;
 }
+
+.legal-notice-container::-webkit-scrollbar {
+  width: 7px;
+}
+
+.legal-notice-container::-webkit-scrollbar-track {
+  background: #f1f1f100;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+}
+
+.legal-notice-container::-webkit-scrollbar-thumb {
+  background-color: #5988ff;
+}
+
+.legal-notice-container::-webkit-scrollbar-thumb:hover {
+  background-color: #8fafff;
+}
+
+
+.legal-notice-container.show {
+  transform: translateY(0);
+}
+
+.close-legal-notice-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  img {
+    margin: 16px;
+    width: 40px;
+    transition: 100ms ease-in-out;
+    border-radius: 10px;
+    cursor: pointer;
+    &:hover {
+      background-color: #00000018;
+    }
+  }
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
