--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,16 +9,26 @@ body {
   scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar {
-  width: 6px;
+body::-webkit-scrollbar {
+  width: 8px;
   background-color: transparent;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-track {
+  width: 8px;
+  background-color: #fffcf3;
+}
+
+body::-webkit-scrollbar-thumb {
   background-color: #5988ff;
+  width: 7px;
   border-radius: 6px;
 }
 
-::-webkit-scrollbar-button {
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #8fafff;
+}
+
+body::-webkit-scrollbar-button {
   display: none;
 }
