--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,7 @@ body::-webkit-scrollbar-thumb:hover {
 body::-webkit-scrollbar-button {
   display: none;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
