--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -212,7 +212,6 @@
   }
 }
 
-
 .logo-socials {
   width: 100%;
 
@@ -329,7 +328,37 @@
   height: 100vh;
   background: #fffcf3;
   transform: translateY(100%);
+  font-family: "Overpass";
   transition: transform 400ms ease-out;
+  p {
+    margin-left: 40px;
+    margin-right: 40px;
+    text-align: justify;
+  }
+
+  h1 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  h2 {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  h3 {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
+  ul {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+
+.legal-notice-container.show {
+  transform: translateY(0);
 }
 
 .legal-notice-container::-webkit-scrollbar {
@@ -352,15 +381,37 @@
   background-color: #8fafff;
 }
 
-
-.legal-notice-container.show {
-  transform: translateY(0);
-}
-
 .close-legal-notice-container {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  position: sticky;
+  height: 80px;
+  width: 100%;
+  background-color: #fffcf3;
+  border-bottom: 1px solid black;
+  right: 0;
+  top: 0;
+  color: white;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  .language-german {
+    cursor: pointer;
+  }
+
+  .language-english {
+    cursor: pointer;
+  }
+
+  p {
+    margin: 0;
+    margin-right: 8px;
+    font-family: "Syne";
+    font-weight: 600;
+  }
   img {
     margin: 16px;
     width: 40px;
@@ -368,9 +419,7 @@
     border-radius: 10px;
     cursor: pointer;
     &:hover {
-      background-color: #00000018;
+      background-color: #ffffff42;
     }
   }
 }
-
-
