--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -19,7 +19,7 @@
 
       h1 {
         margin: 0;
-        padding-top: 240px;
+        padding-top: 200px;
         padding-left: 70px;
         font-family: "Syne";
         font-style: normal;
@@ -226,6 +226,7 @@
       }
 
       button {
+        margin-top: -10px;
         width: 250px;
         height: 68px;
         border: 4px solid #fffcf3;
