added a function for sending me a email

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -57,7 +57,7 @@
             <div (click)="navigateTo('https://github.com/YusufFiliz95')">
               <img src="assets/img/github.svg" alt="" id="githubLink">
             </div>
-            <div>
+            <div (click)="sendEmail()">
               <img src="assets/img/email.svg" alt="">
             </div>
             <div (click)="navigateTo('https://www.linkedin.com/in/yusuf-filiz-b75b2a196')">
