--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -49,7 +49,7 @@
           <div class="icon" (click)="navigateTo('https://github.com/YusufFiliz95')">
             <img src="assets/img/github.svg" draggable="false" alt="">
           </div>
-          <div class="icon">
+          <div class="icon" (click)="sendEmail()">
             <img src="assets/img/email.svg" draggable="false" alt="">
           </div>
           <div class="icon" (click)="navigateTo('https://www.linkedin.com/in/yusuf-filiz-b75b2a196')">
