--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -18,6 +18,7 @@
       width: 100%;
 
       h1 {
+        width: fit-content;
         margin: 0;
         padding-top: 200px;
         padding-left: 70px;
